# ultrastar-score

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/ultrastar_score/: __init__.py  audio.py  cli.py  parser.py  scoring.py
src/ultrastar_score/pitch/: __init__.py  bindings.cpp  detector.py  ptakf.cpp  ptakf.h
tests/: test_parser.py  test_pitch.py  test_scoring.py
