[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ultrastar-score"
version = "0.1.0"
description = "Score UltraStar karaoke files against vocal audio using Vocaluxe pitch detection and USDX scoring"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "MrDix" },
]
keywords = ["ultrastar", "karaoke", "pitch-detection", "scoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "numpy>=1.24",
    "soundfile>=0.12",
    "soxr>=0.3",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
mp3 = [
    "audioread>=3.0",
]
native = [
    "scikit-build-core>=0.10",
    "pybind11>=2.13",
]

[project.scripts]
uscore = "ultrastar_score.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ultrastar_score"]

[tool.pytest.ini_options]
testpaths = ["tests"]
