[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "ultrastar-score"
version = "0.2.0"
description = "Score UltraStar karaoke files against vocal audio using Vocaluxe pitch detection and USDX scoring"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "MrDix" },
]
keywords = ["ultrastar", "karaoke", "pitch-detection", "scoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "numpy>=1.24",
    "soundfile>=0.12",
    "soxr>=0.3",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
mp3 = [
    "audioread>=3.0",
]

[project.scripts]
uscore = "ultrastar_score.cli:main"

[tool.scikit-build]
cmake.version = ">=3.18"
wheel.packages = ["src/ultrastar_score"]
build-dir = "build/{wheel_tag}"

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_*"
test-requires = ["pytest"]
test-command = "pytest {project}/tests -x"

[tool.cibuildwheel.linux]
before-build = "pip install pybind11"

[tool.cibuildwheel.macos]
before-build = "pip install pybind11"

[tool.cibuildwheel.windows]
before-build = "pip install pybind11"

[tool.pytest.ini_options]
testpaths = ["tests"]
